@@ -2,9 +2,11 @@ FinFamily Release notes
 
 At least for now releases follow the Subversion revision numbers. Numbers in the headers show download counts for the older version. Earlier release notes are in releasenotes0172
 
-Release 940 on 18 nov 2010
+Release 941 on 18 nov 2010
 
 * Fixed restore backup for state, village, farm and croft
+* fixed backup for relation notice 2nd date part
+* fixed restore for relation notice source
  
 Release 938 on 17 nov 2010
 
